drupal/sites/all/themes/tp4/sass/modules/_header.scss
/**
 * Header (fat and slim)
 */


/*
 *Social
*/
header{
  font-family: $adelle-regular;
  color: $dark-gray;
  .block{
    @include breakpoint($breakpoint-mobile){
      margin-bottom: 0em;
    }
    @include breakpoint($breakpoint-tablet){
      margin-bottom: 1.5em;
    }
  }
  @include breakpoint($breakpoint-mobile){
    .menu-toggle{
      display: block;
      width: 20px;
      height: 3px;;
      border-top: 9px double $light-mint;
      border-bottom: 3px solid $light-mint;
      cursor: pointer;
      float: left;
      margin-right: 10px;
      margin-top: 4px;
    }
    .logo{
      float: left;
      width: 121px;
      margin-bottom: 4px;
    }
  }
  @include breakpoint($breakpoint-tablet){
    .menu-toggle{
      display: none;
    }
    .logo{
      width: auto;
    }
  }
  .follow-us{
    @include breakpoint($breakpoint-mobile){
      display: none;
    }
    @include breakpoint($breakpoint-tablet){
      display: block;
      text-align: right;
      float: right;
      .text{
        display: inline-block;
        margin: 0 10px;
        &:before{
          content: '|';
          padding-right: 10px;
        }
      }
      ul{
        margin-top: -5px;
        float: right;
        li{
          float: left;
        }
      }
    }
  }
  .user-menu{
    @include breakpoint($breakpoint-mobile){
      display: none;
    }
    @include breakpoint($breakpoint-tablet){
      display: block;
      float: right;
      a{
        color: $dark-gray;
      }
      li{
        display: inline-block;
        margin-right: 10px;
        &:last-child{
          margin-right: 0px;
          padding-left: 10px;
          position: relative;
          height: 20px;
          &:before{
            content: '';
            height: 4px;
            width: 4px;
            background-color: $light-gray;
            position: absolute;
            top: 30%;
            left: 0;
            -webkit-border-radius: 4px;
            border-radius: 4px;
          }
        }
        &:first-child{
          &:before{
            display: none;
          }
        }
        &.user{
          position: relative;
          padding-left: 20px;
          &:before{
            content: '';
            background: image-url('avatar-icon.jpg') no-repeat center center;
            height: 15px;
            width: 12px;
            display: block;
            position: absolute;
            left: 0;
          }
        }
      }
    }
  }
  .search{
    font-size: 13px;
    @include breakpoint($breakpoint-mobile){
      clear: both;
      position: relative;
      .form-item-keys-2{
        display: inline-block;
        float: left;
        height: auto;
        overflow: hidden;
        width: 100%;
        margin-right: 10px;
        vertical-align: bottom;
        line-height: 23px;
        font-weight: normal;
        margin: 0;
        padding: 10px;
        background-color: #000;
        -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .3);
        box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .3);
        -moz-box-sizing: border-box;
        box-sizing: border-box;
      }
      [type=text]{
        float: left;
        height: 24px;
        border: 1px solid #ccc;
        border-radius: 0;
        width: 100%;
        line-height: 20px;
        color: #777;
        text-indent: 6px;
        line-height: 21px;
        background: #fff;
        &:focus{
          outline: none;
        }
      }
      .form-submit{
        position: absolute;
        bottom: 0;
        right: 0;
        height: 48px;
        color: white;
        border: none;
        background: image-url('mobile-search-hover.jpg') no-repeat center center;
        background-color: #000;
        border-radius: 0;
        text-indent: 200%;
        overflow: hidden;
        width: 34px;
      }
    }
    @include breakpoint($breakpoint-tablet){
      display: block;
      float: right;
      clear: right;
      margin-top: 25px;
      .form-item-keys-2{
        padding: 0;
        width: auto;
        background-color: transparent;
        -webkit-box-shadow: none;
        box-shadow: none;
        &:before{
          content: "Search";
          width: 45px;
          height: 20px;
          display: block;
          left: 0;
          bottom: 0;
          position: absolute;
          left: -45px;
        }
      }
      [type=text]{
        border-right: none;
        width: 140px;
        &::-webkit-input-placeholder {
          opacity: 0;
        }

        &:-moz-placeholder { /* Firefox 18- */
          opacity: 0;
        }
        &::-moz-placeholder {  /* Firefox 19+ */
          opacity: 0;
        }

:-ms-input-placeholder {  
   color: red;  
}
      }
      .form-submit{
        position: relative;
        display: block;
        float: left;
        width: 20px;
        height: 24px;
        border: 1px solid #ccc;
        border-left: none;
        background-color: #fff;
        background: image-url('search-submit.png') no-repeat center center;
      }
    }
  }
}

@include breakpoint($breakpoint-mobile){
  .search-toggle{
    position: absolute;
    bottom: 0;
    right: 0;
    height: 48px;
    color: white;
    border: none;
    background: image-url('mobile-search.jpg') no-repeat center center;
    background-color: #fff;
    border-radius: 0;
    text-indent: 200%;
    overflow: hidden;
    width: 34px;
  }
  .search {
    border-bottom: 2px solid #000;
    form{
      display: none;
    }
  }
  .search.active {
    border-bottom: none;
    form{
      display: block;
    }
  }
}
@include breakpoint($breakpoint-tablet){
  .search-toggle{
    display: none;
  }
  .search{
    border-bottom: none;
    form {
      display: block;
    }
  }
}

